--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "orientation": "any",
     "icons": [
         {
-            "src": "https://github.com/RohitDhatrak/calculator/tree/master/images/icon.png",
+            "src": "./images/icon.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
