--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Made by Rohit Dhatrak",
     "short_name": "Calculator",
-    "theme_color": "#f3920b",
-    "background_color": "#000000",
+    "theme_color": "#ffffff",
+    "background_color": "#ffffff",
     "display": "standalone",
     "scope": "/",
     "start_url": "https://rohits-calculator.netlify.app/",
